--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,23 +18,29 @@
   },
   "plugins": ["react-refresh", "simple-import-sort"],
   "rules": {
-    "react-refresh/only-export-components": ["warn",{
+    "react-refresh/only-export-components": [
+      "warn",
+      {
         "allowConstantExport": true
       }
     ],
     "@typescript-eslint/no-unnecessary-condition": "error",
     "@typescript-eslint/no-unused-vars": [
-      "error", {
+      "error",
+      {
         "argsIgnorePattern": "_",
         "varsIgnorePattern": "_"
       }
     ],
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error",
+    "simple-import-sort/imports": "warn",
+    "simple-import-sort/exports": "warn",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "prettier/prettier": ["warn", {
-      "endOfLine": "auto"
-    }]
+    "prettier/prettier": [
+      "warn",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
