--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
-    "prettier": "prettier . --write",
-    "lint": "eslint --fix --ext ts,tsx --report-unused-disable-directives  .",
+    "lint": "prettier . --write && eslint --fix --ext ts,tsx --report-unused-disable-directives  .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "styled-components": "^6.1.8"
