--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -14,7 +14,7 @@
   "ignorePatterns": ["dist", "vite.config.ts"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "**/tsconfig.json"
   },
   "plugins": ["react-refresh", "simple-import-sort"],
   "rules": {
