--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+
+    implementation 'org.apache.commons:commons-lang3:3.14.0'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
+
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
 tasks.named('test') {
