--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,6 @@ out/
 /nbdist/
 /.nb-gradle/
 
-.vscode/
-
 logs
 *.log
 npm-debug.log*
@@ -53,3 +51,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+**/.env
