--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
 
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 }
 
 tasks.named('test') {
