--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 
     implementation 'org.postgresql:postgresql:42.7.1'
 
@@ -34,6 +35,9 @@ dependencies {
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+    testImplementation "org.testcontainers:postgresql:1.19.5"
+    testImplementation 'org.testcontainers:junit-jupiter:1.19.5'
 }
 
 tasks.named('test') {
