--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,21 @@ services:
     container_name: frontend
     build: ./frontend/
     ports:
+      - "3000:3000"
+    restart: on-failure
+
+  nginx:
+    image: nginx:1.25.3-alpine
+    container_name: nginx
+    ports:
       - "80:80"
+      - "443:443"
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    restart: on-failure
+
 volumes:
   db-data:
