--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,3 +46,14 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.register('bootRunDev') {
+    group 'application'
+    description 'Runs the Spring Boot application with the dev profile'
+    doFirst {
+        tasks.bootRun.configure {
+            systemProperty 'spring.profiles.active', 'dev'
+        }
+    }
+    finalizedBy tasks.bootRun
+}
