Limit requests per ip

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,11 @@ http {
     gzip_disable "msie6";
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
+    limit_req_zone $binary_remote_addr zone=req_limit:10m rate=10r/s;
 
     server {
         listen 80;
+        limit_req zone=req_limit;
 
         location / {
             proxy_pass http://frontend:3000;
