--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,6 +4,16 @@ spring:
     driverClassName: org.postgresql.Driver
     username: postgres
     password: root
+
+    testWhileIdle: true
+    test-on-borrow: true
+    hikari:
+      connection-test-query: SELECT 1
+      connectionTimeout: 30000
+      idleTimeout: 600000
+      maxLifetime: 1800000
+      validationTimeout: 300000
+
   jpa:
     open-in-view: false
     hibernate:
