--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
       retries: 5
     restart: on-failure
 
+  redis:
+    container_name: redis
+    image: redis:7.2.4-alpine3.19
+    ports:
+      - "6379:6379"
+    restart: on-failure
+
   backend:
     container_name: backend
     build: ./backend/
