nginx: fix limit requests issue

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
 
     server {
         listen 80;
-        limit_req zone=req_limit;
+        limit_req zone=req_limit burst=20;
 
         location / {
             proxy_pass http://frontend:3000;
