--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,11 +14,10 @@ spring:
   threads:
     virtual:
       enabled: true
-  cache:
-    type: redis
-  redis:
-    host: localhost
-    port: 6379
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 management:
   endpoints:
