--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,10 @@
 # Build stage
 FROM node:20.11.0-alpine AS build
 
+ARG VITE_CAPTCHA_SITE_KEY
+
+ENV VITE_CAPTCHA_SITE_KEY=$VITE_CAPTCHA_SITE_KEY
+
 WORKDIR /frontend
 
 COPY package.json package-lock.json ./
