--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.21.2",
-    "recharts": "^2.12.4"
+    "recharts": "^2.12.4",
+    "use-context-selector": "^1.4.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
