back: Disable reCaptcha in dev mode

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -40,6 +40,6 @@ server:
 
 google:
   captcha:
-    key:
-      secret: ${CAPTCHA_SECRET_KEY}
+    enabled: true
+    secret-key: ${CAPTCHA_SECRET_KEY}
 
