Use '/api/v1/auth' for logging or logout

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,9 +28,11 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'org.flywaydb:flyway-core:10.10.0'
-    compileOnly 'org.projectlombok:lombok:1.18.30'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     runtimeOnly 'org.postgresql:postgresql:42.7.2'
     runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.10.0'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
