--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -15,7 +15,10 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
+    def jjwtVersion = '0.12.5'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -28,15 +31,16 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'org.flywaydb:flyway-core:10.10.0'
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
     runtimeOnly 'org.postgresql:postgresql:42.7.2'
     runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.10.0'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation "org.testcontainers:postgresql:1.19.5"
+    testImplementation 'org.testcontainers:postgresql:1.19.5'
     testImplementation 'org.testcontainers:junit-jupiter:1.19.5'
 }
 
