--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD:-root}
       - SPRING_DATA_REDIS_HOST=redis
       - CAPTCHA_SECRET_KEY=${CAPTCHA_SECRET_KEY}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970}
     restart: unless-stopped
 
   frontend:
