--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,3 +1,6 @@
 version: "1.0"
 profile:
-  name: qodana.starter
+  name: qodana.recommended
+linters:
+  - name: "jetbrains/qodana-jvm:2024.1"
+  - name: "jetbrains/qodana-js:2024.1"
